# blog-to-podcast

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/: .env  llm_agent.py  main.py  tts_converter.py  web_scrapper.py
